--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&family=Playfair+Display:wght@400;500;600&display=swap');
 
+:root{
+    --slider-section-height: 680px;
+    --feature-section-height: 710px;
+}
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+}
+
+*::selection{
+    background-color: #333333;
+    color: white;
 }
 
 ul{
@@ -19,6 +29,8 @@ ul{
 .slider{
     position: fixed;
     z-index: -1;
+    height: var(--slider-section-height);
+    width: 100%;
 }
 
 /*HEADER*/
@@ -83,8 +95,8 @@ ul{
     content: '';
     position: absolute;
     top: 14px;
-    left: -12px;
-    width: 180px;
+    left: 0px;
+    width: 50px;
     height: 20px;
     background-color: transparent;
 }
@@ -224,6 +236,17 @@ ul{
     transition: all 0.4s ease;
 }
 
+.cart::after{
+    content: "";
+    position: absolute;
+    top: 15px;
+    right: -9px;
+    background-color: transparent;
+    width: 50px;
+    height: 20px;
+    border-radius: 0;
+}
+
 .cart-icon{
 
 }
@@ -344,6 +367,139 @@ ul{
     color: #d6d6d6;
 }
 
+/*CART*/
+.cart-detail{
+    display: none;
+    position: absolute;
+    top: 34px;
+    right: 0px;
+    background: #1f1f1f;
+    width: 300px;
+    padding: 10px 20px 20px;
+    cursor: default;
+}
+
+.cart:hover > .cart-detail{
+    display: block;
+}
+
+.cart-list{
+
+}
+
+.cart-content{
+    display: flex;
+}
+
+.cart-items{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 12px 0;
+}
+
+.cart-img{
+    width: 50px;
+}
+
+.cart-items__info{
+    margin-left: 18px;
+    color: white;
+}
+
+.cart-items__name{
+    font-size: 0.75rem;
+    font-weight: lighter;
+    text-transform: capitalize;
+}
+
+.cart-items__quantity{
+    font-size: 0.7rem;
+    font-weight: lighter;
+    color: #999;
+    margin-top: 3px;
+}
+
+.cart-items__number{
+
+}
+
+.cart-items__times{
+
+}
+
+.cart-items__price{
+
+}
+
+.cart-items__delete{
+    color: #999;
+    font-size: 0.8rem;
+    padding: 0px 5px;
+    background-color: #333;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.cart-items__delete:hover{
+    color: white;
+    transition: all 0.2s linear;
+}
+
+.cart-total{
+    color: white;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #555;
+    padding: 10px 0;
+}
+
+.cart-total__words{
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.cart-total__price{
+    font-size: 0.7rem;
+    font-weight: bold;
+}
+
+.cart-footer{
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cart-footer__view-cart{
+    color: #999;
+    text-decoration: none;
+    text-transform: capitalize;
+}
+
+.btn.cart-footer__btn{
+    padding: 10px 15px;
+    color: white;
+    font-size: 0.7rem;
+    background: #2d66f7;
+    border: none;
+}
+
+.btn.cart-footer__btn:hover{
+    background-color: #999;
+    transition: all 0.4s linear;
+}
+
+.cart-footer__icon{
+    margin-right: 4px;
+}
+
+.cart-footer__btn-words{
+
+}
+
+
 /*FEATURE SECTION*/
 .feature-section{
     position: absolute;
@@ -351,19 +507,26 @@ ul{
     align-items: center;
     justify-content: space-evenly;
     padding: 110px 62px;
+    overflow-x: hidden;
     width: 100%;
+    height: var(--feature-section-height);
+    overflow-y: hidden;
 }
 
 .feature1{
-    top: 583px;
+    top: var(--slider-section-height);
 }
 
 .feature2{
-    top: 1204px;
+    top: calc(var(--slider-section-height) * 2 + 30px);
 }
 
 .feature3{
-    top: 1755px;
+    top: calc(var(--slider-section-height) * 3 + 30px);
+}
+
+.feature4{
+    top: calc(var(--slider-section-height) * 4 + 30px);
 }
 
 .white {
@@ -426,10 +589,114 @@ ul{
 }
 
 .feature-content__wrapper{
-
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*display: flex;*/
+    /*align-items: center;*/
 }
 
 .feature-img{
-    width: 500px;
-    padding: 0 15px;
+    width: 600px;
+}
+
+/*HERO SECTION*/
+.hero-section{
+    position: absolute;
+    top: calc(var(--feature-section-height)*5 - 90px);
+    background-color: #f9f9f9;
+    padding: 40px 62px 80px;
+    width: 100%;
+}
+
+.hero__heading{
+    margin: 20px 0 60px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.hero__grid{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    grid-template-rows: repeat(3,1fr);
+    grid-gap: 30px;
+}
+
+.hero-items{
+    width: 100%;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
+
+.hero-items__img{
+    width: 100%;
+    height: 100%;
+}
+
+.hero-items__overlay{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    line-height: 14;
+    background-color: rgba(0,0,0,0.8);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.hero-items:hover .hero-items__overlay{
+    opacity: 1;
+    transition: all 0.4s ease-out;
+}
+
+.hero-items:hover .hero-items__img{
+    transform: scale(1.1);
+    transition: all 0.4s ease-out;
+}
+
+.hero-items__description{
+    color: white;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+
+/*DISCOVER SECTION*/
+.discover-section{
+    position: absolute;
+    width: 100%;
+    top: calc(var(--feature-section-height)*6 + 150px);
+}
+
+.discover-section__heading{
+
+}
+
+.discover-section__summary{
+
+}
+
+.discover-section__grid{
+
+}
+
+.discover-items{
+
+}
+
+.discover-items__icon{
+
+}
+
+.discover-items__info{
+
+}
+
+.discover-items__name{
+
+}
+
+.discover-items__description{
+
 }
