--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&family=Playfair+Display:wght@400;500;600&display=swap');
 
 :root{
-    --slider-section-height: 680px;
+    --slider-section-height: 600px;
     --feature-section-height: 710px;
 }
 
@@ -31,6 +31,7 @@ ul{
     z-index: -1;
     height: var(--slider-section-height);
     width: 100%;
+    top: 0;
 }
 
 /*HEADER*/
@@ -61,11 +62,11 @@ ul{
     font-size: 1.7rem;
     text-transform: uppercase;
     font-weight: 700;
+    transition: all 0.4s ease;
 }
 
 .header__logo:hover{
     color: #999;
-    transition: all 0.4s ease;
 }
 
 .header-facilities {
@@ -89,6 +90,7 @@ ul{
     text-transform: uppercase;
     letter-spacing: 1px;
     position: relative;
+    transition: all 0.4s ease;
 }
 
 .navbar-items::before {
@@ -104,7 +106,6 @@ ul{
 .navbar-items:hover{
     color: white;
     cursor: pointer;
-    transition: all 0.4s ease;
 }
 
 .navbar-items:hover > .subnav{
@@ -304,6 +305,7 @@ ul{
     filter: brightness(0.3);
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .desc__heading{
@@ -340,6 +342,7 @@ ul{
     padding: 14px 28px;
     border-radius: 40px;
     cursor: pointer;
+    transition: all 0.2s ease-in-out;
 }
 
 .btn--transparent{
@@ -347,10 +350,11 @@ ul{
     color: white;
 }
 
-.btn:hover{
+.btn--white:hover,
+.btn--black:hover,
+.btn--transparent:hover{
     border: 1px solid #2d66f7 ;
     background-color: #2d66f7 ;
-    transition: all 0.2s ease-in-out;
 }
 
 .btn--white{
@@ -365,6 +369,24 @@ ul{
 .btn--black{
     border: 1px solid #a9a9a9;
     color: #d6d6d6;
+}
+
+.btn--blue{
+    color: white;
+    background-color: #2d66f7;
+    border: 1px solid #2d66f7;
+}
+
+.btn--blue:hover {
+    background-color: transparent;
+    color: #2d66f7;
+}
+
+.btn--center{
+    margin-top: 100px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 /*CART*/
@@ -518,15 +540,15 @@ ul{
 }
 
 .feature2{
-    top: calc(var(--slider-section-height) * 2 + 30px);
+    top: calc(var(--slider-section-height) * 2 + 110px);
 }
 
 .feature3{
-    top: calc(var(--slider-section-height) * 3 + 30px);
+    top: calc(var(--slider-section-height) * 3 + 220px);
 }
 
 .feature4{
-    top: calc(var(--slider-section-height) * 4 + 30px);
+    top: calc(var(--slider-section-height) * 4 + 330px);
 }
 
 .white {
@@ -602,10 +624,11 @@ ul{
 /*HERO SECTION*/
 .hero-section{
     position: absolute;
-    top: calc(var(--feature-section-height)*5 - 90px);
+    top: calc(var(--feature-section-height)*5 + -110px);
     background-color: #f9f9f9;
     padding: 40px 62px 80px;
     width: 100%;
+    height: 1200px;
 }
 
 .hero__heading{
@@ -631,6 +654,7 @@ ul{
 .hero-items__img{
     width: 100%;
     height: 100%;
+    transition: all 0.4s ease-out;
 }
 
 .hero-items__overlay{
@@ -644,11 +668,14 @@ ul{
     background-color: rgba(0,0,0,0.8);
     opacity: 0;
     cursor: pointer;
+    transition: all 0.4s ease-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .hero-items:hover .hero-items__overlay{
     opacity: 1;
-    transition: all 0.4s ease-out;
 }
 
 .hero-items:hover .hero-items__img{
@@ -665,38 +692,62 @@ ul{
 /*DISCOVER SECTION*/
 .discover-section{
     position: absolute;
+    background-color: white;
     width: 100%;
-    top: calc(var(--feature-section-height)*6 + 150px);
+    top: calc(var(--feature-section-height)*6 + 380px);
+    padding: 62px 80px;
 }
 
 .discover-section__heading{
-
+    text-align: center;
+    font-size: 2.1rem;
+    text-transform: capitalize;
+    margin-bottom: 30px;
 }
 
 .discover-section__summary{
-
+    text-align: center;
+    width: 60%;
+    margin: auto;
+    font-size: 1.2rem;
+    color: #666;
+    font-weight: lighter;
 }
 
 .discover-section__grid{
-
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 10px 30px;
+    margin-top: 60px;
 }
 
 .discover-items{
-
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 30px;
 }
 
 .discover-items__icon{
-
+    margin-top: 4px;
+    font-size: 1.2rem;
+    color: #2d66f7;
+    min-width: 24px;
 }
 
 .discover-items__info{
-
+    margin-left: 19px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .discover-items__name{
-
+    font-size: 1.1rem;
+    margin-bottom: 16px;
 }
 
 .discover-items__description{
-
+    font-size: 0.9rem;
+    color: #666;
 }
