--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,14 +1,15 @@
 /*HEADER*/
-.header--hide{
+.header--hide {
   transform: translateY(-100%);
   opacity: 0;
 }
 
 .header-wrapper {
   width: 100%;
-  height: auto;
+  height: 52px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   position: fixed;
   z-index: 1;
   background: #1f1f1f;
@@ -16,28 +17,30 @@
   opacity: 1;
 }
 
-.header{
-  min-width: 1140px;
+.header {
+  width: 100%;
+  height: 100%;
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   margin: 0 62px;
 }
 
-.header__logo{
+.header__logo {
   width: 125px;
-  height: 52px;
+  height: 100%;
   text-align: center;
   line-height: 52px;
   text-decoration: none;
-  color: white;
+  color: #fff;
   font-size: 1.7rem;
   text-transform: uppercase;
   font-weight: 700;
   transition: all 0.4s ease;
 }
 
-.header__logo:hover{
+.header__logo:hover {
   color: #999;
 }
 
@@ -45,70 +48,71 @@
   display: flex;
   min-width: 600px;
   font-size: 0.75rem;
+  height: 100%;
+  align-items: center;
 }
 
 /*NAVBAR*/
 
-.navbar{
+.navbar {
+  height: 100%;
   flex: 1;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 
-.navbar-items{
+.navbar-items {
   font-weight: 700;
   text-decoration: none;
   color: #999;
   text-transform: uppercase;
   letter-spacing: 1px;
   position: relative;
+  height: 100%;
   transition: all 0.4s ease;
+  display: flex;
+  align-items: center;
 }
 
-.navbar-items::before {
-  content: '';
-  position: absolute;
-  top: 14px;
-  left: 0px;
-  width: 50px;
-  height: 20px;
-  background-color: transparent;
+.navbar-items.navbar-items--unset-pos {
+  position: unset;
 }
 
-.navbar-items:hover{
+.navbar-items:hover {
   color: white;
   cursor: pointer;
 }
 
-.navbar-items:hover > .subnav{
+.navbar-items:hover > .subnav {
   display: block;
   opacity: 1;
 }
 
-.navbar-items:hover > .subnav--padding{
+.navbar-items:hover > .subnav--padding {
   display: grid;
   opacity: 1;
 }
 
-.navbar-items--active{
+.navbar-items--active {
   color: white;
 }
 
 /*SUBNAV*/
 
-.subnav{
+.subnav {
   display: none;
   list-style: none;
   opacity: 0;
   position: absolute;
   background-color: #1f1f1f;
-  top: 34px;
+  top: 52px;
   left: -12px;
   min-width: 180px;
   transition: all 0.3s ease;
 }
 
-.subnav-items{
+.subnav-items {
   display: flex;
   font-size: 0.7rem;
   text-transform: capitalize;
@@ -120,50 +124,51 @@
   transition: all 0.4s ease-out;
 }
 
-.subnav-items:hover{
+.subnav-items:hover {
   color: white;
   background-color: #000;
 }
 
-.subnav--padding{
-  display: none;
-  opacity: 0;
-  grid-template-columns: repeat(3,390px);
+.subnav--padding {
   position: absolute;
-  top: 34px;
-  left: -745px;
+  display: none;
+  left: 0;
+  right: 0;
+  top: 52px;
+  opacity: 0;
+  grid-template-columns: repeat(3, 1fr);
   background-color: #1f1f1f;
   padding: 20px;
 }
 
-.subnav__heading{
+.subnav__heading {
   margin: 0 0 8px 32px;
   font-size: 0.8rem;
   color: #999;
 }
 
-.subnav__heading:hover{
+.subnav__heading:hover {
   color: white;
 }
 
-.subnav__col1 ul{
+.subnav__col1 ul {
   margin-right: 18px;
 }
 
-.subnav__col1 .subnav__heading{
+.subnav__col1 .subnav__heading {
   margin: 0 0 8px 15px;
 }
 
-.subnav__col2{
+.subnav__col2 {
   border-left: 1px solid #ffffff1f;
   border-right: 1px solid #ffffff1f;
 }
 
-.subnav__col2 ul{
+.subnav__col2 ul {
   margin: 0 18px;
 }
 
-.subnav__col3 ul{
+.subnav__col3 ul {
   margin-left: 18px;
 }
 
@@ -171,7 +176,7 @@
   font-size: 0.5rem;
 }
 
-.sub-subnav{
+.sub-subnav {
   position: absolute;
   display: none;
   width: 190px;
@@ -180,16 +185,15 @@
   background: #1f1f1f;
 }
 
-.subnav-items:hover > .sub-subnav{
+.subnav-items:hover > .sub-subnav {
   display: block;
 }
 
-
 /*CART*/
-.cart-detail{
+.cart-detail {
   display: none;
   position: absolute;
-  top: 34px;
+  top: 52px;
   right: 0px;
   background: #1f1f1f;
   width: 300px;
@@ -197,60 +201,56 @@
   cursor: default;
 }
 
-.cart:hover > .cart-detail{
+.cart:hover > .cart-detail {
   display: block;
 }
 
-.cart-list{
-
+.cart-list {
 }
 
-.cart-content{
+.cart-content {
   display: flex;
 }
 
-.cart-items{
+.cart-items {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   padding: 12px 0;
 }
 
-.cart-img{
+.cart-img {
   width: 50px;
 }
 
-.cart-items__info{
+.cart-items__info {
   margin-left: 18px;
   color: white;
 }
 
-.cart-items__name{
+.cart-items__name {
   font-size: 0.75rem;
   font-weight: lighter;
   text-transform: capitalize;
 }
 
-.cart-items__quantity{
+.cart-items__quantity {
   font-size: 0.7rem;
   font-weight: lighter;
   color: #999;
   margin-top: 3px;
 }
 
-.cart-items__number{
-
+.cart-items__number {
 }
 
-.cart-items__times{
-
+.cart-items__times {
 }
 
-.cart-items__price{
-
+.cart-items__price {
 }
 
-.cart-items__delete{
+.cart-items__delete {
   color: #999;
   font-size: 0.8rem;
   padding: 0px 5px;
@@ -260,11 +260,11 @@
   transition: all 0.2s linear;
 }
 
-.cart-items__delete:hover{
+.cart-items__delete:hover {
   color: white;
 }
 
-.cart-total{
+.cart-total {
   color: white;
   align-items: center;
   display: flex;
@@ -273,107 +273,173 @@
   padding: 10px 0;
 }
 
-.cart-total__words{
+.cart-total__words {
   font-size: 0.7rem;
   text-transform: uppercase;
   font-weight: bold;
 }
-.cart-total__price{
+.cart-total__price {
   font-size: 0.7rem;
   font-weight: bold;
 }
 
-.cart-footer{
+.cart-footer {
   padding-top: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.cart-footer__view-cart{
+.cart-footer__view-cart {
   color: #999;
   text-decoration: none;
   text-transform: capitalize;
 }
 
-
-.cart-footer__icon{
+.cart-footer__icon {
   margin-right: 4px;
 }
 
-.cart{
+.cart {
   color: #999;
   position: relative;
+  padding: 0 12px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
-.cart::before {
-  content: '3';
-  position: absolute;
-  top: -7px;
-  right: -11px;
-  width: 15px;
-  height: 15px;
-  background-color: #2d66f7;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 15px;
-  color: white;
-}
-
-.cart:hover{
+.cart:hover {
   color: white;
   cursor: pointer;
   transition: all 0.4s ease;
 }
 
-.cart::after{
-  content: "";
-  position: absolute;
-  top: 15px;
-  right: -9px;
-  background-color: transparent;
-  width: 50px;
-  height: 20px;
-  border-radius: 0;
-}
+.cart-icon {
+  position: relative;
 
-.cart-icon{
-
+  &::after {
+    content: "3";
+    position: absolute;
+    font-size: 0.5rem;
+    top: -10px;
+    right: -12px;
+    width: 16px;
+    height: 16px;
+    background-color: #2d66f7;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 2;
+    color: #fff;
+  }
 }
 
 .search {
-  margin-left: 40px;
-  color: #999;
+  color: rgb(153, 153, 153);
+  margin-left: 12px;
+  position: relative;
+  padding: 0px 12px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+
+  &:hover {
+    color: white;
+    cursor: pointer;
+    transition: all 0.4s ease;
+  }
 }
 
-.search:hover{
-  color: white;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-
-.subnav--padding.subnav--center-position {
-  left: -970px;
-}
-
-.subnav--padding.subnav--center-position .subnav-items{
+.subnav--padding.subnav--center-position .subnav-items {
   align-items: center;
   justify-content: flex-start;
 }
 
-.subnav--padding.subnav--center-position .subnav-items-icon{
+.subnav--padding.subnav--center-position .subnav-items-icon {
   font-size: 0.7rem;
   margin-right: 12px;
   line-height: 12px;
 }
 
-.search-icon{
-
+.search-icon {
 }
 
-.bar{
+.bar {
 }
 
-.bar-icon{
+.bar-icon {
+}
 
+.mobile-menu__icon {
+}
+
+.mobile-menu {
+  display: none;
+  color: rgb(153, 153, 153);
+  margin-left: 12px;
+  position: relative;
+  padding: 0px 12px;
+  height: 100%;
+  align-items: center;
+}
+
+.mobile-menu:hover {
+  color: white;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+// RESPONSIVE
+@media (max-width: 968px) {
+  .navbar {
+    display: none;
+  }
+
+  .header__logo {
+    line-height: 80px;
+    color: #000;
+  }
+
+  .header-wrapper {
+    height: 80px;
+    background-color: #fff;
+    width: 100%;
+  }
+
+  .header-facilities {
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 0.9rem;
+    color: #878787;
+    min-width: unset;
+  }
+
+  .cart {
+    display: none;
+  }
+
+  .search {
+    padding: 0px 20px;
+    transition: all 0.2s linear;
+    &:hover {
+      color: #1f1f1f;
+    }
+  }
+
+  .mobile-menu {
+    display: flex;
+    transition: all 0.2s linear;
+    align-items: center;
+    padding: 0px 20px;
+
+    &:hover {
+      color: #1f1f1f;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    margin: 0 0 0 16px;
+  }
 }
