--- a/assets/scss/features.scss
+++ b/assets/scss/features.scss
@@ -1,5 +1,5 @@
 /*FEATURE SECTION*/
-.feature-section{
+.feature-section {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -13,106 +13,105 @@
   background-color: white;
 }
 
-.black{
+.black {
   background-color: #232323;
 }
 
-.feature-content{
+.feature-content {
   max-width: 480px;
   min-width: 400px;
   padding: 0 15px;
 }
 
-.feature-content__heading{
+.feature-content__heading {
   font-size: 2.2rem;
   margin-bottom: 30px;
 }
 
-.black .feature-content__heading{
+.black .feature-content__heading {
   color: white;
 }
 
-.feature-content__font{
-  font-family: 'Playfair Display', serif;
-
+.feature-content__font {
+  font-family: "Playfair Display", serif;
 }
 
-.feature-content__summary{
-  font-family: 'Playfair Display', serif;
+.feature-content__summary {
+  font-family: "Playfair Display", serif;
   margin-bottom: 30px;
   font-size: 1.25rem;
   font-weight: lighter;
   line-height: 1.5;
 }
 
-.white .feature-content__summary{
+.white .feature-content__summary {
   color: #666;
 }
 
-.black .feature-content__summary{
+.black .feature-content__summary {
   color: #a9a9a9;
 }
 
-.feature-content__description{
+.feature-content__description {
   margin-bottom: 30px;
   font-size: 0.9rem;
   color: #666;
   line-height: 1.7;
 }
 
-.white .feature-content__description{
+.white .feature-content__description {
   color: #666;
 }
 
-.black .feature-content__description{
+.black .feature-content__description {
   color: #a9a9a9;
 }
 
-.feature-content__wrapper{
+.feature-content__wrapper {
   /*width: 100%;*/
   /*height: 100%;*/
   /*display: flex;*/
   /*align-items: center;*/
 }
 
-.feature-img{
-  width: 600px;
+.feature-img {
+  min-width: 600px;
+  width: 100%;
 }
 
 /*HERO SECTION*/
-.hero-section{
+.hero-section {
   background-color: #f9f9f9;
   padding: 40px 62px 80px;
   width: 100%;
 }
 
-.hero__heading{
+.hero__heading {
   margin: 20px 0 60px;
   font-size: 1.5rem;
   font-weight: bold;
 }
 
-.hero__grid{
+.hero__grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(250px, 1fr));
-  grid-template-rows: repeat(3,1fr);
   grid-gap: 30px;
 }
 
-.hero-items{
+.hero-items {
   width: 100%;
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-.hero-items__img{
+.hero-items__img {
   width: 100%;
   height: 100%;
   transition: all 0.4s ease-out;
 }
 
-.hero-items__overlay{
+.hero-items__overlay {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -120,7 +119,7 @@
   width: 100%;
   height: 100%;
   line-height: 14;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   opacity: 0;
   cursor: pointer;
   transition: all 0.4s ease-out;
@@ -129,78 +128,177 @@
   justify-content: center;
 }
 
-.hero-items:hover .hero-items__overlay{
+.hero-items:hover .hero-items__overlay {
   opacity: 1;
 }
 
-.hero-items:hover .hero-items__img{
+.hero-items:hover .hero-items__img {
   transform: scale(1.1);
   transition: all 0.4s ease-out;
 }
 
-.hero-items__description{
+.hero-items__description {
   color: white;
   font-size: 0.9rem;
   font-weight: bold;
 }
 
 /*DISCOVER SECTION*/
-.discover-section{
+.discover-section {
   background-color: white;
   width: 100%;
   padding: 62px 80px;
 }
 
-.discover-section__heading{
+.discover-section__heading {
   text-align: center;
   font-size: 2.1rem;
   text-transform: capitalize;
   margin-bottom: 30px;
 }
 
-.discover-section__summary{
+.discover-section__summary {
+  font-family: "Playfair Display", serif;
   text-align: center;
-  width: 60%;
+  width: 65%;
   margin: auto;
   font-size: 1.2rem;
   color: #666;
   font-weight: lighter;
 }
 
-.discover-section__grid{
+.discover-section__grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
   grid-gap: 10px 30px;
   margin-top: 60px;
 }
 
-.discover-items{
+.discover-items {
   display: flex;
   align-items: flex-start;
   margin-bottom: 30px;
 }
 
-.discover-items__icon{
+.discover-items__icon {
   margin-top: 4px;
   font-size: 1.2rem;
   color: #2d66f7;
   min-width: 24px;
 }
 
-.discover-items__info{
+.discover-items__info {
   margin-left: 19px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.discover-items__name{
+.discover-items__name {
   font-size: 1.1rem;
   margin-bottom: 16px;
 }
 
-.discover-items__description{
+.discover-items__description {
   font-size: 0.9rem;
   color: #666;
+}
+
+// RESPONSIVE
+
+@media (max-width: 1025px) {
+  .feature-content {
+    max-width: 300px;
+    min-width: 250px;
+  }
+}
+
+@media (max-width: 968px) {
+  .hero__grid {
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    margin: 0 40px;
+  }
+
+  .hero__heading {
+    text-align: center;
+  }
+
+  .discover-section {
+    padding: 62px 32px;
+  }
+}
+
+@media (max-width: 870px) {
+  .feature-section {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    padding: 110px 0;
+  }
+
+  .feature-content {
+    max-width: unset;
+    min-width: unset;
+    text-align: center;
+    margin-top: 24px;
+    width: 85%;
+  }
+
+  .feature-content__heading {
+    font-size: 1.8rem;
+  }
+
+  .feature-content__summary {
+    font-size: 1.1rem;
+  }
+
+  .feature-content__description {
+    font-size: 0.85rem;
+  }
+
+  .feature-content__wrapper {
+    display: flex;
+  }
+
+  .feature-img {
+    min-width: unset;
+    margin: auto;
+    width: 75%;
+  }
+
+  .feature-section.black {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-section {
+    padding: 40px 0 80px;
+  }
+
+  .hero__heading {
+    text-align: center;
+  }
+
+  .discover-section__heading {
+    font-size: 1.7rem;
+  }
+
+  .discover-section__summary {
+    width: 100%;
+    font-size: 1.1rem;
+  }
+
+  .discover-section__grid {
+    grid-template-columns: unset;
+  }
+}
+
+@media (max-width: 625px) {
+  .hero__grid {
+    grid-template-columns: repeat(1, minmax(250px, 1fr));
+  }
+
+  .hero__heading {
+    text-align: center;
+  }
 }
