--- a/assets/scss/search.scss
+++ b/assets/scss/search.scss
@@ -51,3 +51,24 @@
     opacity: 1;
     z-index: 2;
 }
+
+@media (max-width: 1050px) and (min-width: 769px) {
+    .search-section__input::placeholder,
+    .search-section__input {
+        font-size: 2.3rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .search-section__input::placeholder,
+    .search-section__input {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 425px) {
+    .search-section__input::placeholder,
+    .search-section__input {
+        font-size: 1rem;
+    }
+}
