--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600&family=Playfair+Display:wght@400;500;600&display=swap");
 
 :root {
-  --slider-section-height: 600px;
+  --slider-section-height: 700px;
   --feature-section-height: 710px;
 }
 
@@ -30,7 +30,67 @@ nav {
 
 .body {
   position: absolute;
-  top: 600px;
+  top: var(--slider-section-height);
   width: 100%;
   overflow: hidden;
+}
+
+.fadeFromTop{
+  animation: fadeFromTop 1s cubic-bezier(0.43, 0, 0.09, 0.97) forwards;
+}
+
+.fadeFromBottom{
+  animation: fadeFromBottom 1s ease-in-out forwards;
+}
+
+// .fadeFromRight{
+//   animation: fadeFromRight 1s ease-in-out forwards;
+// }
+
+.fadeScaleSmall{
+  animation: fadeScaleSmall 1s cubic-bezier(0.6, -0.28, 0.74, 0.05) forwards;
+}
+
+@keyframes fadeFromTop {
+  from{
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeFromBottom {
+  from{
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+// @keyframes fadeFromRight {
+//   from{
+//     transform: translateX(100%);
+//     opacity: 0;
+//   }
+//   to{
+//     transform: translateY(0);
+//     opacity: 1;
+//   }
+// }
+
+@keyframes fadeScaleSmall {
+  from{
+    transform: scale(1.2);
+    opacity: 0;
+  }
+  to{
+    transform: scale(1);
+    opacity: 1;
+  }
 }
