--- a/assets/scss/search.scss
+++ b/assets/scss/search.scss
@@ -14,6 +14,19 @@
     transition: all 0.5s ease-in-out;
 }
 
+.search-input-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-section__outsideZone {
+    width: 100%;
+    flex: 1;
+}
+
 .search-section__input {
     width: 60%;
     height: 84px;
@@ -44,6 +57,7 @@
     margin-top: 20px;
     cursor: pointer;
     font-size: 1rem;
+    padding: 6px;
     color: #000;
     opacity: 0;
     transition: all 1.5s linear;
@@ -55,11 +69,11 @@
 }
 
 .search-section.search-section--display{
-    & > .search-section__input::placeholder{
+    .search-section__input::placeholder{
         opacity: 1;
     }
 
-    & > .search-section__close{
+    .search-section__close{
         opacity: 1;
     }
 }
