add transition for scroll to top button

--- a/assets/scss/button.scss
+++ b/assets/scss/button.scss
@@ -96,6 +96,8 @@
   cursor: pointer;
   border-radius: 50%;
   text-decoration: none;
+  opacity: 0;
+  transition: ease 300ms;
 
   &:hover {
     background: #120d0d;
